--- a/resources/linklist.css
+++ b/resources/linklist.css
@@ -119,7 +119,7 @@
 }
 
 .panel-linklist-widget .linklist-body .scrollable-content-container .media-heading {
-
+	font-weight: bold;
 }
 
 .panel-linklist-widget .linklist-body .scrollable-content-container .media-list {
@@ -132,6 +132,10 @@
 	padding:2px 10px 2px 20px;
 	margin-left:-10px;
 	margin-right:-10px;
+}
+
+.panel-linklist-widget .linklist-body .scrollable-content-container .media-list li a {
+	display: block;
 }
 
 ul.linklist-links {
